# dbt-training-data-mesh-dp-b

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
dbt/: dbt_project.yml  packages.yml  profiles.yml  selectors.yml
dbt/macros/: db_ds_tbl_id_generator.sql  query_comment.sql
dbt/macros/db_ds_tbl_id_generator/: generate_database_name.sql  generate_schema_name.sql  get_custom_alias.sql
dbt/models/hr/: hr.yml
dbt/models/hr/datamart/: customers.sql  customers.yml  customers_v2.sql
dbt/models/hr/staging/: stg_customers_source.yml
dbt/seeds/jaffle_shop_finance/: schema.yml
